// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calendarWeeksInMonth calculates the number of weeks correctly with Monday start of week 1`] = `
Array [
  Array [
    "2015-1 days: 5",
    "2015-2 days: 5",
    "2015-3 days: 6",
    "2015-4 days: 5",
    "2015-5 days: 5",
    "2015-6 days: 5",
    "2015-7 days: 5",
    "2015-8 days: 6",
    "2015-9 days: 5",
    "2015-10 days: 5",
    "2015-11 days: 6",
    "2015-12 days: 5",
  ],
  Array [
    "2016-1 days: 5",
    "2016-2 days: 5",
    "2016-3 days: 5",
    "2016-4 days: 5",
    "2016-5 days: 6",
    "2016-6 days: 5",
    "2016-7 days: 5",
    "2016-8 days: 5",
    "2016-9 days: 5",
    "2016-10 days: 6",
    "2016-11 days: 5",
    "2016-12 days: 5",
  ],
  Array [
    "2017-1 days: 6",
    "2017-2 days: 5",
    "2017-3 days: 5",
    "2017-4 days: 5",
    "2017-5 days: 5",
    "2017-6 days: 5",
    "2017-7 days: 6",
    "2017-8 days: 5",
    "2017-9 days: 5",
    "2017-10 days: 6",
    "2017-11 days: 5",
    "2017-12 days: 5",
  ],
  Array [
    "2018-1 days: 5",
    "2018-2 days: 5",
    "2018-3 days: 5",
    "2018-4 days: 6",
    "2018-5 days: 5",
    "2018-6 days: 5",
    "2018-7 days: 6",
    "2018-8 days: 5",
    "2018-9 days: 5",
    "2018-10 days: 5",
    "2018-11 days: 5",
    "2018-12 days: 6",
  ],
  Array [
    "2019-1 days: 5",
    "2019-2 days: 5",
    "2019-3 days: 5",
    "2019-4 days: 5",
    "2019-5 days: 5",
    "2019-6 days: 5",
    "2019-7 days: 5",
    "2019-8 days: 5",
    "2019-9 days: 6",
    "2019-10 days: 5",
    "2019-11 days: 5",
    "2019-12 days: 6",
  ],
  Array [
    "2020-1 days: 5",
    "2020-2 days: 5",
    "2020-3 days: 6",
    "2020-4 days: 5",
    "2020-5 days: 5",
    "2020-6 days: 5",
    "2020-7 days: 5",
    "2020-8 days: 6",
    "2020-9 days: 5",
    "2020-10 days: 5",
    "2020-11 days: 6",
    "2020-12 days: 5",
  ],
]
`;

exports[`calendarWeeksInMonth calculates the number of weeks correctly with Sunday start of week 1`] = `
Array [
  Array [
    "2015-1 days: 5",
    "2015-2 days: 4",
    "2015-3 days: 5",
    "2015-4 days: 5",
    "2015-5 days: 6",
    "2015-6 days: 5",
    "2015-7 days: 5",
    "2015-8 days: 6",
    "2015-9 days: 5",
    "2015-10 days: 5",
    "2015-11 days: 5",
    "2015-12 days: 5",
  ],
  Array [
    "2016-1 days: 6",
    "2016-2 days: 5",
    "2016-3 days: 5",
    "2016-4 days: 5",
    "2016-5 days: 5",
    "2016-6 days: 5",
    "2016-7 days: 6",
    "2016-8 days: 5",
    "2016-9 days: 5",
    "2016-10 days: 6",
    "2016-11 days: 5",
    "2016-12 days: 5",
  ],
  Array [
    "2017-1 days: 5",
    "2017-2 days: 5",
    "2017-3 days: 5",
    "2017-4 days: 6",
    "2017-5 days: 5",
    "2017-6 days: 5",
    "2017-7 days: 6",
    "2017-8 days: 5",
    "2017-9 days: 5",
    "2017-10 days: 5",
    "2017-11 days: 5",
    "2017-12 days: 6",
  ],
  Array [
    "2018-1 days: 5",
    "2018-2 days: 5",
    "2018-3 days: 5",
    "2018-4 days: 5",
    "2018-5 days: 5",
    "2018-6 days: 5",
    "2018-7 days: 5",
    "2018-8 days: 5",
    "2018-9 days: 6",
    "2018-10 days: 5",
    "2018-11 days: 5",
    "2018-12 days: 6",
  ],
  Array [
    "2019-1 days: 5",
    "2019-2 days: 5",
    "2019-3 days: 6",
    "2019-4 days: 5",
    "2019-5 days: 5",
    "2019-6 days: 6",
    "2019-7 days: 5",
    "2019-8 days: 5",
    "2019-9 days: 5",
    "2019-10 days: 5",
    "2019-11 days: 5",
    "2019-12 days: 5",
  ],
  Array [
    "2020-1 days: 5",
    "2020-2 days: 5",
    "2020-3 days: 5",
    "2020-4 days: 5",
    "2020-5 days: 6",
    "2020-6 days: 5",
    "2020-7 days: 5",
    "2020-8 days: 6",
    "2020-9 days: 5",
    "2020-10 days: 5",
    "2020-11 days: 5",
    "2020-12 days: 5",
  ],
]
`;
